# rustfs

./: .gitignore
backend/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
